# vibe-check

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs
.claude/commands/: init-session.md
.codex/prompts/: init-session.md
.cursor/rules/: main.mdc
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml
claude/: instructions.md
claude-code/: CLAUDE.md
codex/: instructions.md
copilot/: instructions.md
copilot-chat/: copilot-instructions.md
cursor/: instructions.md
src/: bom.rs  config.rs  download_manager.rs  file_tracker.rs  lib.rs  main.rs  template_engine.rs  template_engine_v1.rs  template_engine_v2.rs  template_manager.rs  utils.rs
src/template_manager/: list.rs  mod.rs  purge.rs  remove.rs  status.rs  update.rs
templates/: AGENTS.md  AGENTS.template.md  C++.md  CMake.md  General.md  Git.md  c++-coding-conventions.md  c++-git-ignore.txt  c-git-ignore.txt  core-principles.md  git-workflow-conventions.md  rust-git-ignore.txt  swift-git-ignore.txt  templates.yml
templates/claude/: CLAUDE.md
templates/claude/commands/: init-session.md
templates/codex/: instructions.md
templates/codex/prompts/: init-session.md
templates/copilot/: copilot-instructions.md
templates/copilot/prompts/: init-session.prompt.md
templates/cursor/: instructions.md
templates/cursor/commands/: init-session.md
templates/v1/: AGENTS.md  rust-coding-conventions.md  swift-format-instructions.json  swift-git-ignore.txt  templates.yml
templates/v2/: templates.yml
universal/: instructions.md
(+1 files in other folders)
