[package]
name = "vibe-check"
version = "4.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5"
owo-colors = "4.1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5.0"

[lints.clippy]
bool_comparison = "allow"
